updated menu item